fix text alignment in spotify buttons (flex)

--- a/css/outlines.css
+++ b/css/outlines.css
@@ -40,13 +40,14 @@
 }
 
 .contrast_button {
-    display: inline-block;
+    display: inline-flex;
     background-color: var(--primary);
     color: var(--background);
     border-radius: 20px;
     height: 41px;
     padding-right: 10px;
     vertical-align: middle;
+    align-items: center;
 }
 
 .nav_menu {
@@ -119,4 +120,15 @@ a {
 
 .top_tracks_item {
     vertical-align: middle;
+}
+
+.contrast_button1 {
+    display: inline-flex;
+    background-color: var(--primary);
+    color: var(--background);
+    border-radius: 20px;
+    height: 41px;
+    padding-right: 10px;
+    vertical-align: middle;
+    align-items: center;
 }
